cicd/k8s/frontend/frontend-deployment-new.yml
### 디플로이먼트 생성

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-v2
  labels:
    app: frontend
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
        - name: frontend
          image: simkids/frontend:1.4
          ports:
            - containerPort: 80
