cicd/k8s/frontend/frontend-deployment.yml
### 디플로이먼트 생성

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - name: frontend
          image: simkids/frontend:latest
          ports:
            - containerPort: 80
