cicd/k8s/frontend/frontend-svc-new.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-v2
spec:
  selector:
    app: frontend
    version: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
