cicd/k8s/frontend/frontend-svc.yml
### 서비스 생성

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-v1
spec:
  selector:
    app: frontend
    version: v1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
